PLT-8106 - Fixing alignment of post body text

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -846,7 +846,7 @@
         .post__body {
             background: transparent !important;
             line-height: 1.5;
-            margin-top: -1px;
+            margin-top: -2px;
             padding: 3px 0 0;
 
             .img-div {
